Layout flickering fixed

--- a/JS StopWatch/style/style.scss
+++ b/JS StopWatch/style/style.scss
@@ -66,3 +66,8 @@ main {
   pointer-events: none;
   cursor: pointer;
 }
+
+.nr-wr {
+  width: 10rem;
+  text-align: center;
+}
